#735: improve error message